--- a/main.html
+++ b/main.html
@@ -8,6 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <header>
+        arunachalam
+        <nav>
+            <a href="#actor" id="nav-actor">Actors</a>
+            <a href="#quote" id="nav-quote">Quates</a>
+        </nav>
+        
+    </header>
+    <section id="actor">
+        Lorem ipsum dolor sit amet.
+    </section>
+    <section id="quote">
+        Lorem ipsum dolor sit amet consquuntur non aperiam minima?
+    </section>
+    <aside>
+        7.5/10 · IMDb
+        Release date: 10 April 1997
+    </aside>
+    <footer>
+        Produced by: &lt Manoj &gt
+    </footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
