--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	 <header>
+	  <header>
         arunachalam
         <nav>
             <a href="#actor" id="nav-actor">Actors</a>
@@ -16,11 +16,14 @@
         </nav>
         
     </header>
+    <summary>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo, officiis.
+    </summary>
     <section id="actor">
         Lorem ipsum dolor sit amet.
     </section>
     <section id="quote">
-        Lorem ipsum dolor sit amet consquuntur non aperiam minima?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ab tempora eius ipsa hic totam impedit sed dolore nulla reprehenderit aperiam deleniti perferendis, aut sequi vel voluptate, sint dolores enim possimus voluptates consequatur facilis. Laudantium harum consequuntur non aperiam minima?
     </section>
     <aside>
         7.5/10 · IMDb
